--- a/style.css
+++ b/style.css
@@ -71,5 +71,13 @@ body{
 }
 
 .clear, .delete {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1 0 21%;
+    border-style: solid;
+    border-width: thin;
+    padding: 5px;
+    height: 65px;
     padding: 0px;
 }
